tests/golden/error/duplicate_import_alias/mod_b.tg
// Module B also provides Foo (different definition).
pub type Foo = Bool
